--- a/src/styles/ourblog.css
+++ b/src/styles/ourblog.css
@@ -9,6 +9,15 @@
     --backgroundgrey: #E5E5E5;
 }
 
+.hiring{
+    background-color: var(--green);
+    padding: 5px 12px;
+    border-radius: 30px;
+    max-width: 100px;
+    font-size: 12px;
+    color: black;
+}
+
 .ourblog{
     width: 100vw;
     height: 100vh;
@@ -84,7 +93,8 @@ button{
     display: flex;
     width: 100vw;
     justify-content: center;
-    min-height: 90vh;
+    height: auto;
+    padding: 50px 0px;
     background-color: var(--lightgrey);
 
 
@@ -98,6 +108,7 @@ button{
     justify-content: center;
     height: 391px;
     border-radius: 20px;
+    margin: auto 30px
 }
 
 
@@ -132,7 +143,7 @@ button{
 
 /************FOOTER ************/
 
-.footer div{
+.footer-one{
     display: grid;
     grid-template-columns: 300px auto auto auto;
     place-items: center;
@@ -146,6 +157,7 @@ button{
     width: 100vw;
     height: 35vh;
     display: flex;
+    flex-shrink: 1;
     justify-content: center;
     background-color: var(--lightgrey);
     
@@ -166,7 +178,7 @@ button{
 
 /************* MEDIA QUERIES ***************/
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 800px){
 
     .ourblog{
         width: 100vw;
@@ -211,6 +223,8 @@ button{
         width: 300px;
         margin: 30px 20px;
     }
+
+
     
     
     .ourblog div article span{
@@ -240,13 +254,13 @@ button{
 }
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width:800px){
 
     .call-to-action{
         display: flex;
         width: 100vw;
         justify-content: center;
-        min-height: 90vh;
+        height: auto;
         background-color: var(--lightgrey);
     
     
@@ -254,7 +268,7 @@ button{
     
     .call-to-action div{
         background-color: var(--darkblue);
-        padding: 20px 40px;
+        padding:15px;
         width: auto !important;
         display: flex;
         flex-direction: column;
@@ -296,14 +310,15 @@ button{
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
 
     .footer div{
         display: flex;
         flex-direction: column;
-        justify-content: left;
-        width: 300px;
-        /* align-items: center; */
+        align-items:  left;
+        width: auto;
+        align-items: flex-start;
+        margin-left: 20px;
     }
     
     
@@ -318,8 +333,12 @@ button{
         
     }
 
+    .footer ul{
+        margin: 0 !important;
+    }
+
     .footer div ul li{
-        font-size: 12px !important;
+        font-size: 25px !important;
     }
     
     .footer div ul :nth-child(1){
