--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,287 +1,273 @@
-:root{
-    --lightblue:  #0DBBFC;
-    --darkblue:#0A2640;
-    --green: #65E4A3 ;
-    --greyblue:#8FB6D5;
-    --white:white;
-    --grey: #777777;
-    --lightgrey:#F1F1F1;
-    --backgroundgrey: #E5E5E5;
+:root {
+  --lightblue: #0dbbfc;
+  --darkblue: #0a2640;
+  --green: #65e4a3;
+  --greyblue: #8fb6d5;
+  --white: white;
+  --grey: #777777;
+  --lightgrey: #f1f1f1;
+  --backgroundgrey: #e5e5e5;
 }
 
-html{
-    overflow-x: hidden;
+html {
+  overflow-x: hidden;
 }
 
-.about{
-    width: 100vw;
-    height: 50vh;
-    background-color: var(--green);
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-   
-    
+.about {
+  width: 100vw;
+  height: 50vh;
+  background-color: var(--green);
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
 }
 
-.hr{
-    width: 700px;
-    margin: 60px 0px;
-
+.hr {
+  width: 700px;
+  margin: 60px 0px;
 }
 
-
-
-.about .second p{
-    word-spacing: 8px;
-    font-weight: 300;
+.about .second p {
+  word-spacing: 8px;
+  font-weight: 300;
 }
 
-.about .second .main-text{
-    width: 400px;
-    line-height: 50px;
+.about .second .main-text {
+  width: 400px;
+  line-height: 50px;
 }
 
-
-
-.about .second{
-    margin: 20px 100px;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: initial;
-    display: flex;
+.about .second {
+  margin: 20px 100px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: initial;
+  display: flex;
 }
 
-
-.two,.three{
-    width: 100vw;
-    height: 50vh;
-    background-color: var(--white);
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 70px;
-
-
-}
-.two p{
-    font-size: 36px;
-    font-weight: 300;
-    max-width: 40vw;
-    margin: 10px auto 50px auto;
-    text-align: center;
-}
-.two div{
-    display: flex;
-    justify-content: space-between;
+.mainPara {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-flex;
+  width: 30em;
+  animation: type 2s steps(60, end);
 }
 
-.two div span{
-    margin: 10px 30px;
+@keyframes type {
+  from {
+    width: 0;
+  }
 }
 
-.two div span h3{
-    font-size: 48px;
-    font-weight: 200;
+.two,
+.three {
+  width: 100vw;
+  height: 50vh;
+  background-color: var(--white);
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+}
+.two p {
+  font-size: 36px;
+  font-weight: 300;
+  max-width: 40vw;
+  margin: 10px auto 50px auto;
+  text-align: center;
+}
+.two div {
+  display: flex;
+  justify-content: space-between;
 }
 
-
-.three{
-    background-color: var(--darkblue);
-    color: white;
-    text-align: left;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    padding: 60px 0px;
-    height: auto !important;
+.two div span {
+  margin: 10px 30px;
 }
 
-.three p{
-    margin: auto 40px;
+.two div span h3 {
+  font-size: 48px;
+  font-weight: 200;
 }
 
-
-.four{
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+.three {
+  background-color: var(--darkblue);
+  color: white;
+  text-align: left;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  padding: 60px 0px;
+  height: auto !important;
 }
 
-.four .first{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    max-width: 800px;
-    max-height: 300px;
-    margin: auto;
+.three p {
+  margin: auto 40px;
 }
 
-
-.four .second{
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 100px;
+.four {
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.four .second span{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: left;
+.four .first {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  max-width: 800px;
+  max-height: 300px;
+  margin: auto;
+}
 
+.four .second {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 100px;
+}
+
+.four .second span {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: left;
 }
 
 .four .second span :nth-child(2) {
-    font-size: 28px;
-    line-height: 48px;
-    font-weight: 200;
-
+  font-size: 28px;
+  line-height: 48px;
+  font-weight: 200;
 }
 .four .second span :nth-child(3) {
-    font-size: 20px;
-    line-height: 32px;
-    font-weight: 100;
-    color: var(--grey);
-
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 100;
+  color: var(--grey);
 }
-.four .first :nth-child(1){
-    color: var(--grey);
-    font-size: 20px;
-    line-height: 32px;
+.four .first :nth-child(1) {
+  color: var(--grey);
+  font-size: 20px;
+  line-height: 32px;
 }
-.four .first :nth-child(2){
-    color: black;
-    font-size: 48px;
-    line-height: 72px;
-
+.four .first :nth-child(2) {
+  color: black;
+  font-size: 48px;
+  line-height: 72px;
 }
-.four .first :nth-child(3){
-    color: var(--grey);
-    font-size: 20px;
-    line-height: 32px;
+.four .first :nth-child(3) {
+  color: var(--grey);
+  font-size: 20px;
+  line-height: 32px;
 }
 
-.five{
-    width: 100vw;
-    display: grid;
-    grid-template-columns: auto auto;
-    place-content: center;
-    row-gap: 30px;
-    column-gap: 60px;
-    padding: 30px 0px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+.five {
+  width: 100vw;
+  display: grid;
+  grid-template-columns: auto auto;
+  place-content: center;
+  row-gap: 30px;
+  column-gap: 60px;
+  padding: 30px 0px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-.five span{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.five span {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.five span div{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20px;
-    height:80px;
+.five span div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 20px;
+  height: 80px;
 }
 
-.five span div :nth-child(1){
-    font-size: 28px;
-    font-weight: 300;
+.five span div :nth-child(1) {
+  font-size: 28px;
+  font-weight: 300;
 }
-.five span div :nth-child(2){
-    font-size: 20px;
-    font-weight: 100;
-    color: grey;
-}
-
-.six{
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    min-height: 100vh;
-    background-color: var(--darkblue);
-    color: white;
-    align-items: center;
+.five span div :nth-child(2) {
+  font-size: 20px;
+  font-weight: 100;
+  color: grey;
 }
 
-.six-first{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: auto;
-    width: 100vw;
-    align-items:  center;
-    margin: 40px;
-    text-align: center;
+.six {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: var(--darkblue);
+  color: white;
+  align-items: center;
 }
 
-.six-first :nth-child(1){
-    font-size: 15px;
-    font-weight: 200;
-    line-height: 32px;
-
-}
-.six-first :nth-child(2){
-    font-size: 48px;
-    font-weight: 300;
-    line-height: 72px;
-
+.six-first {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+  width: 100vw;
+  align-items: center;
+  margin: 40px;
+  text-align: center;
 }
 
-
-
-.six-second span{
-    display: grid;
-    grid-template-columns: auto auto;
-    place-items: left !important;
-    align-items: right;
-    column-gap: 60px;
-    margin-bottom: 40px;
-  
-    
+.six-first :nth-child(1) {
+  font-size: 15px;
+  font-weight: 200;
+  line-height: 32px;
+}
+.six-first :nth-child(2) {
+  font-size: 48px;
+  font-weight: 300;
+  line-height: 72px;
 }
 
- .six-second span :nth-child(1){
-  
-    font-size: 48px;
-   
-} 
- .six-second span :nth-child(2){
-    font-size: 17px; 
-    font-weight: 100; 
-    max-width: 500px;
-} 
-
-.six-second span :nth-child(1) span{
-    color:#65E4A3
+.six-second span {
+  display: grid;
+  grid-template-columns: auto auto;
+  place-items: left !important;
+  align-items: right;
+  column-gap: 60px;
+  margin-bottom: 40px;
 }
 
+.six-second span :nth-child(1) {
+  font-size: 48px;
+}
+.six-second span :nth-child(2) {
+  font-size: 17px;
+  font-weight: 100;
+  max-width: 500px;
+}
 
+.six-second span :nth-child(1) span {
+  color: #65e4a3;
+}
 
 /*****MEDIA QUERIES *******/
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 900px) {
+  html > * {
+    overflow-x: hidden !important;
+  }
 
-    html > *{
-        overflow-x: hidden !important;
-    }
+  .hr {
+    width: 200px;
+  }
 
-    .hr{
-        width: 200px;
-    }
-
-.about{
+  .about {
     padding: 100px 0px;
     width: 100vw;
     height: 60vh;
@@ -293,34 +279,28 @@ html{
     align-items: flex-start;
     text-align: left;
     flex-shrink: 1;
-   
-    
-}
+  }
 
-
-
-.about .second p{
+  .about .second p {
     word-spacing: 8px;
     font-weight: 300;
-}
+  }
 
-.about .second .main-text{
-    width: auto!important;
+  .about .second .main-text {
+    width: auto !important;
     line-height: 50px;
-}
+  }
 
-
-
-.about .second{
+  .about .second {
     margin: 20px;
     flex-direction: column;
     justify-content: space-around;
     align-items: initial;
     display: flex;
-}
+  }
 
-
-.two,.three{
+  .two,
+  .three {
     width: 100vw !important;
     height: auto;
     background-color: var(--white);
@@ -330,34 +310,31 @@ html{
     justify-content: center;
     align-items: center;
     margin-top: 70px;
-
-
-}
-.two p{
+  }
+  .two p {
     font-size: 36px;
     font-weight: 300;
     width: auto !important;
     margin: 20px;
     text-align: center;
-}
-.two div{
+  }
+  .two div {
     display: flex;
     flex-direction: column !important;
     justify-content: space-between;
-}
+  }
 
-.two div span{
+  .two div span {
     margin: 10px 30px;
     flex-shrink: 1;
-}
+  }
 
-.two div span h3{
+  .two div span h3 {
     font-size: 48px;
     font-weight: 200;
-}
+  }
 
-
-.three{
+  .three {
     background-color: var(--darkblue);
     color: white;
     text-align: left;
@@ -366,24 +343,22 @@ html{
     padding: 60px 0px;
     height: auto !important;
     width: 100vw !important;
-}
+  }
 
-.three p{
+  .three p {
     margin: auto 50px;
-}
+  }
 
-
-.four{
+  .four {
     width: 100vw;
-    height:auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 60px 0px;
+  }
 
-}
-
-.four .first{
+  .four .first {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -392,62 +367,57 @@ html{
     /* max-width: 800px; */
     height: auto;
     margin: 15px;
-}
+  }
 
-.four .first p{
+  .four .first p {
     width: 100vw;
     word-wrap: break-word;
-}
+  }
 
-
-.four .second{
+  .four .second {
     display: flex;
     flex-direction: column !important;
     justify-content: space-between;
     align-items: center;
     margin: 20px 100px;
-}
+  }
 
-.four .second span{
+  .four .second span {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: left;
+  }
 
-}
-
-.four .second span :nth-child(2) {
+  .four .second span :nth-child(2) {
     font-size: 28px;
     line-height: 48px;
     font-weight: 200;
-
-}
-.four .second span :nth-child(3) {
+  }
+  .four .second span :nth-child(3) {
     font-size: 20px;
     line-height: 32px;
     font-weight: 100;
     color: var(--grey);
-
-}
-.four .first :nth-child(1){
+  }
+  .four .first :nth-child(1) {
     color: var(--grey);
     font-size: 20px;
     line-height: 32px;
-}
-.four .first :nth-child(2){
+  }
+  .four .first :nth-child(2) {
     color: black;
     font-size: 36px;
     line-height: 72px;
-
-}
-.four .first :nth-child(3){
+  }
+  .four .first :nth-child(3) {
     color: var(--grey);
     font-size: 17px;
     line-height: 32px;
     max-width: 90vw;
-}
+  }
 
-.five{
+  .five {
     width: 100vw;
     display: grid;
     grid-template-columns: auto;
@@ -457,35 +427,35 @@ html{
     padding: 30px 0px;
     margin-top: 30px;
     margin-bottom: 30px;
-}
+  }
 
-.five span{
+  .five span {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 3;
     width: 300px;
-}
+  }
 
-.five span div{
+  .five span div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 20px;
-    height:80px;
-}
+    height: 80px;
+  }
 
-.five span div :nth-child(1){
+  .five span div :nth-child(1) {
     font-size: 28px;
     font-weight: 300;
-}
-.five span div :nth-child(2){
+  }
+  .five span div :nth-child(2) {
     font-size: 20px;
     font-weight: 100;
     color: grey;
-}
+  }
 
-.six{
+  .six {
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -493,57 +463,46 @@ html{
     background-color: var(--darkblue);
     color: white;
     align-items: center;
-}
+  }
 
-.six-first{
+  .six-first {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 144px;
-    align-items:  center;
+    align-items: center;
     margin: 20px;
     text-align: center;
-}
+  }
 
-.six-first :nth-child(1){
+  .six-first :nth-child(1) {
     font-size: 15px;
     font-weight: 200;
     line-height: 22px;
-
-}
-.six-first :nth-child(2){
+  }
+  .six-first :nth-child(2) {
     font-size: 24px;
     font-weight: 300;
     line-height: 35px;
     max-width: 90vw;
+  }
 
-}
+  .six-second span {
+    display: flex !important;
+    flex-direction: row !important;
+    margin: 20px;
+  }
 
-
-
-.six-second span{
-   display: flex !important;
-   flex-direction: row !important;
-   margin: 20px;
-  
-    
-}
-
- .six-second span :nth-child(1){
-  
+  .six-second span :nth-child(1) {
     font-size: 24px;
-    
-   
-} 
- .six-second span :nth-child(2){
-    font-size: 17px; 
-    font-weight: 100; 
+  }
+  .six-second span :nth-child(2) {
+    font-size: 17px;
+    font-weight: 100;
     max-width: 500px;
-} 
+  }
 
-.six-second span :nth-child(1) span{
-    color:#65E4A3
-}
-
-    
+  .six-second span :nth-child(1) span {
+    color: #65e4a3;
+  }
 }
